Version 19   2013-October-15

--Fixed an obscure bug where the tool/tile grid-picker pages could get stuck in
  a state where they would repeatedly kick you out of your house (thanks Josh
  Collins).

--Added a bounty that builds up on a robber over time to be earned by whatever
  house finally kills the robber (starting bounty 500, +500 for each theft,
  +1000 for each instance of murder).  Trying bounties in conjuction with no
  salaries (thanks Joshua Collins).

--Added a shotgun object that can be placed in the house and picked up by the
  wife as she walks across it.  Kills robber short range (when adjacent).  Wife
  collects and holds bounty for robbers that she kills.

--Fixed corner gap visibility inconsistency by applying simpler algorithm 
  (thanks Joshua Collins).

--Added a 256-step power propagation limit to prevent complex circuits that
  take many propagations to either loop or settle from potentially freezing
  the game (thanks Joshua Collins).

--Blocked quitting from house check-in/out pages when quitting could kill the
  player.




Version 18   Live Server Fixes

--Gun price up to 1200 to strengthen Pit Bulls somewhat, and Powered Door price
  down to 600 to compensate for door drawbacks.

--Chills are now put on all houses player entered in the last hour when player
  dies, regardless of where player dies.  Player is haunted by what they did
  during the last hour of their past life.  This closes the "go home and kill
  yourself to get more money and try that house again" exploit.

--All tools dumped at the end of a robbery (including when reaching vault or
  running out the door) are now added to the vault.  This is safe now, because
  the suicide-at-home exploit has been closed.

--Changed from a linear bypass-cost curve to a sqrt-based curve, creating
  diminishing returns as you build with more expensive tiles, and increasing
  the viability of low-end house designs.
