@@ -154,8 +154,16 @@ $smtpPassword = "secret";
 
 // prices that are loaded when database is first setup
 // they can be changed manually later from the admin page
-//
-// array( ID, Price, InGallery, Note )
+
+// these can be used to tweak all prices evenly at load time
+$objectPriceTweak = 0.6;
+$toolPriceTweak = 1.0;
+$galleryPriceTweak = 1.0;
+
+// array( ID, Price, type, Note )
+// type = 0  for house objects
+// type = 1 for tools
+// type = 2 for gallery
 $defaultPrices = array(
     array( 1, 5, 0, "Wooden Wall" ),
     array( 2, 100, 0, "Steel Wall" ),
@@ -168,6 +176,7 @@ $defaultPrices = array(
     array( 102, 5, 0, "Wiring" ),
     array( 120, 5, 0, "Vertical Wiring" ),
     array( 121, 5, 0, "Horizontal Wiring" ),
+    array( 51, 15, 0, "Wired Wooden Wall" ),
     array( 101, 50, 0, "Pressure Toggle Switch (Starts Off)" ),
     array( 108, 50, 0, "Pressure Toggle Switch (Starts On)" ),
     array( 100, 50, 0, "Sticking Pressure Switch" ),
@@ -185,176 +194,176 @@ $defaultPrices = array(
     array( 72, 20, 0, "Cat" ),
     array( 130, 800, 0, "Wife's Shotgun" ),
     
-    array( 500, 400, 0, "Saw" ),
-    array( 509, 2400, 0, "Crowbar" ),
-    array( 501, 800, 0, "Cutting Torch" ),
-    array( 502, 1200, 0, "S-W Model 36" ),
-    array( 503, 150, 0, "Brick" ),
-    array( 512, 200, 0, "Club" ),
-    array( 505, 1200, 0, "Doorstop" ),
-    array( 506, 400, 0, "Wire Cutters" ),
-    array( 507, 1200, 0, "Ammonium Nitrate Diesel Bomb" ),
-    array( 508, 100, 0, "Drugged Meat" ),
-    array( 510, 100, 0, "Water" ),
-    array( 511, 1800, 0, "Ladder" ),
+    array( 500, 400, 1, "Saw" ),
+    array( 509, 2400, 1, "Crowbar" ),
+    array( 501, 800, 1, "Cutting Torch" ),
+    array( 502, 1200, 1, "S-W Model 36" ),
+    array( 503, 150, 1, "Brick" ),
+    array( 512, 200, 1, "Club" ),
+    array( 505, 1200, 1, "Doorstop" ),
+    array( 506, 400, 1, "Wire Cutters" ),
+    array( 507, 1200, 1, "Ammonium Nitrate Diesel Bomb" ),
+    array( 508, 100, 1, "Drugged Meat" ),
+    array( 510, 100, 1, "Water" ),
+    array( 511, 1800, 1, "Ladder" ),
 
-    array( 2000, 100000, 1, "Owl - Rohrer" ),
-    array( 2001, 100000, 1, "Sky - Rohrer" ),
-    array( 2002, 100000, 1, "Everything I Love --- by Stephen Lavelle" ),
-    array( 2003, 100000, 1, "Breeze --- by Jenova Chen" ),
-    array( 2004, 100000, 1, "Kiwi! --- by Danny Ledonne" ),
-    array( 2005, 100000, 1, "Are you embarrassed to dance? --- by Ashly Burch" ),
-    array( 2006, 100000, 1, "Lips for Eyelids --- by Ashly Burch" ),
-    array( 2007, 100000, 1, "Escape Found --- by Scott Brodie" ),
-    array( 2008, 100000, 1, "Old Guard --- by Scott Brodie" ),
-    array( 2009, 100000, 1, "Bound Sun --- by Scott Brodie" ),
-    array( 2010, 100000, 1, "Eyes Wide Spread --- by Daniel Cook" ),
-    array( 2011, 100000, 1, "Down Goes Frazier --- by Jason Stevenson" ),
-    array( 2012, 100000, 1, "Yellow Bars --- by Jason Stevenson" ),
-    array( 2013, 100000, 1, "Obviously, a major malfunction --- by Jason Stevenson" ),
-    array( 2014, 100000, 1, "Flame Out --- by Jason Stevenson" ),
-    array( 2015, 100000, 1, "Band of Brothers --- by Jason Stevenson" ),
-    array( 2016, 100000, 1, "Mike Shot --- by Jason Stevenson" ),
-    array( 2017, 100000, 1, "Tentacles! --- by Jason Stevenson" ),
-    array( 2018, 100000, 1, "Zapruder260 --- by Jason Stevenson" ),
-    array( 2019, 100000, 1, "Delicate Arch --- by Jason Stevenson" ),
-    array( 2020, 100000, 1, "Manhattan --- by William Beebe" ),
-    array( 2021, 100000, 1, "Core --- by William Beebe" ),
-    array( 2022, 100000, 1, "Night, Harlem --- by William Beebe" ),
-    array( 2023, 100000, 1, "Night City --- by William Beebe" ),
-    array( 2024, 100000, 1, "Lulu --- by American McGee" ),
-    array( 2025, 100000, 1, "Crossed --- by American McGee" ),
-    array( 2026, 100000, 1, "Flicker --- by American McGee" ),
-    array( 2027, 100000, 1, "Xian --- by American McGee" ),
-    array( 2028, 100000, 1, "Whoops --- by Anthony Burch" ),
-    array( 2029, 100000, 1, "Today --- by Nick Montfort" ),
-    array( 2030, 100000, 1, "Felicity --- by Cactus" ),
-    array( 2031, 100000, 1, "Checker --- by Chris Hecker" ),
-    array( 2032, 100000, 1, "Warhol --- by Victor Stone" ),
-    array( 2033, 100000, 1, "Ass Over Tea Kettle --- by Victor Stone" ),
-    array( 2034, 100000, 1, "Study in Blue --- by Rod Humble" ),
-    array( 2035, 100000, 1, "Portrait of a Raindrop --- by Rod Humble" ),
-    array( 2036, 100000, 1, "The Storm --- by Rod Humble" ),
-    array( 2037, 100000, 1, "The Escape --- by Rod Humble" ),
+    array( 2000, 100000, 2, "Owl - Rohrer" ),
+    array( 2001, 100000, 2, "Sky - Rohrer" ),
+    array( 2002, 100000, 2, "Everything I Love --- by Stephen Lavelle" ),
+    array( 2003, 100000, 2, "Breeze --- by Jenova Chen" ),
+    array( 2004, 100000, 2, "Kiwi! --- by Danny Ledonne" ),
+    array( 2005, 100000, 2, "Are you embarrassed to dance? --- by Ashly Burch" ),
+    array( 2006, 100000, 2, "Lips for Eyelids --- by Ashly Burch" ),
+    array( 2007, 100000, 2, "Escape Found --- by Scott Brodie" ),
+    array( 2008, 100000, 2, "Old Guard --- by Scott Brodie" ),
+    array( 2009, 100000, 2, "Bound Sun --- by Scott Brodie" ),
+    array( 2010, 100000, 2, "Eyes Wide Spread --- by Daniel Cook" ),
+    array( 2011, 100000, 2, "Down Goes Frazier --- by Jason Stevenson" ),
+    array( 2012, 100000, 2, "Yellow Bars --- by Jason Stevenson" ),
+    array( 2013, 100000, 2, "Obviously, a major malfunction --- by Jason Stevenson" ),
+    array( 2014, 100000, 2, "Flame Out --- by Jason Stevenson" ),
+    array( 2015, 100000, 2, "Band of Brothers --- by Jason Stevenson" ),
+    array( 2016, 100000, 2, "Mike Shot --- by Jason Stevenson" ),
+    array( 2017, 100000, 2, "Tentacles! --- by Jason Stevenson" ),
+    array( 2018, 100000, 2, "Zapruder260 --- by Jason Stevenson" ),
+    array( 2019, 100000, 2, "Delicate Arch --- by Jason Stevenson" ),
+    array( 2020, 100000, 2, "Manhattan --- by William Beebe" ),
+    array( 2021, 100000, 2, "Core --- by William Beebe" ),
+    array( 2022, 100000, 2, "Night, Harlem --- by William Beebe" ),
+    array( 2023, 100000, 2, "Night City --- by William Beebe" ),
+    array( 2024, 100000, 2, "Lulu --- by American McGee" ),
+    array( 2025, 100000, 2, "Crossed --- by American McGee" ),
+    array( 2026, 100000, 2, "Flicker --- by American McGee" ),
+    array( 2027, 100000, 2, "Xian --- by American McGee" ),
+    array( 2028, 100000, 2, "Whoops --- by Anthony Burch" ),
+    array( 2029, 100000, 2, "Today --- by Nick Montfort" ),
+    array( 2030, 100000, 2, "Felicity --- by Cactus" ),
+    array( 2031, 100000, 2, "Checker --- by Chris Hecker" ),
+    array( 2032, 100000, 2, "Warhol --- by Victor Stone" ),
+    array( 2033, 100000, 2, "Ass Over Tea Kettle --- by Victor Stone" ),
+    array( 2034, 100000, 2, "Study in Blue --- by Rod Humble" ),
+    array( 2035, 100000, 2, "Portrait of a Raindrop --- by Rod Humble" ),
+    array( 2036, 100000, 2, "The Storm --- by Rod Humble" ),
+    array( 2037, 100000, 2, "The Escape --- by Rod Humble" ),
 
-    array( 2038, 100000, 1, "Skull --- by David S. Goyer" ),
-    array( 2039, 100000, 1, "Crow in Red --- by Adam Saltsman" ),
-    array( 2040, 100000, 1, "Geovisage One --- by Adam Saltsman" ),
-    array( 2041, 100000, 1, "Geovisage Two --- by Adam Saltsman" ),
-    array( 2042, 100000, 1, "Geovisage Three --- by Adam Saltsman" ),
-    array( 2043, 100000, 1, "Savanna --- by Adam Saltsman" ),
-    array( 2044, 100000, 1, "Sentinel --- by Adam Saltsman" ),
-    array( 2045, 100000, 1, "The Grim Bulldog --- by Jason Stevenson" ),
-    array( 2046, 100000, 1, "Wilderness --- by Terry Cavanagh" ),
-    array( 2047, 100000, 1, "Electric Slide --- by Darius Kazemi" ),
-    array( 2048, 100000, 1, "Rhizome --- by Darius Kazemi" ),
-    array( 2049, 100000, 1, "Stay Up All Night --- by Darius Kazemi" ),
-    array( 2050, 100000, 1, "Metaphysicians --- by Darius Kazemi" ),
-    array( 2051, 100000, 1, "Summer Reach --- by William Beebe" ),
-    array( 2052, 100000, 1, "Toby --- by Jordan Magnuson" ),
-    array( 2053, 100000, 1, "RYB 1 --- by Alex Diamond" ),
-    array( 2054, 100000, 1, "RYB 2 --- by Alex Diamond" ),
-    array( 2055, 100000, 1, "RYB 3 --- by Alex Diamond" ),
-    array( 2056, 100000, 1, "RYB 4 --- by Alex Diamond" ),
-    array( 2057, 100000, 1, "RYB 5 --- by Alex Diamond" ),
-    array( 2058, 100000, 1, "Dermatillomanian Handle --- by Alex Diamond" ),
-    array( 2059, 100000, 1, "Dermatillomanian Cultivation --- by Alex Diamond" ),
-    array( 2060, 100000, 1, "Dermatillomanian Sheath --- by Alex Diamond" ),
-    array( 2061, 100000, 1, "Dermatillomanian Seduction --- by Alex Diamond" ),
-    array( 2062, 100000, 1, "Dermatillomanian Abyss --- by Alex Diamond" ),
-    array( 2063, 100000, 1, "UKU1NbyLyNCsRgVSsoVOLosPEOiyGRJKRdUh2a1WP5P6" ),
-    array( 2064, 100000, 1, "i1wZebCgqGYLcBWK7K888dfPdJs57ohaoF35NBSp8xxh" ),
-    array( 2065, 100000, 1, "sKZAkUoDPjKdEmOaucx1RUqHi444FV3JquwzIVLFBI8B" ),
-    array( 2066, 100000, 1, "H8d9k15aVQob0d4pXEiFGL6Ry2HMRckCdKD5MJT1sCh9" ),
-    array( 2067, 100000, 1, "Hrn6kGh64jqCISghEEyyU13D4EV5gWItFD0VaJSKBEWZ" ),
-    array( 2068, 100000, 1, "Dogs --- by Kyle Pulver" ),
-    array( 2069, 100000, 1, "Set --- by Kyle Pulver" ),
-    array( 2070, 100000, 1, "Rise --- by Kyle Pulver" ),
-    array( 2071, 100000, 1, "Haze --- by Kyle Pulver" ),
-    array( 2072, 100000, 1, "Four --- by Kyle Pulver" ),
-    array( 2073, 100000, 1, "Prism --- by Kyle Pulver" ),
-    array( 2074, 100000, 1, "Protect Me from What I Want --- by Nick Montfort" ),
-    array( 2075, 100000, 1, "Forward --- by Jason Stevenson" ),
-    array( 2076, 100000, 1, "Skull over Red --- by Mark Johns" ),
-    array( 2077, 100000, 1, "Dead End --- by S. Galvin" ),
-    array( 2078, 100000, 1, "Ceci n'est pas une beetle --- by S. Galvin" ),
-    array( 2079, 100000, 1, "Palomar --- by S. Galvin" ),
-    array( 2080, 100000, 1, "Distant Chrome --- by S. Galvin" ),
-    array( 2081, 100000, 1, "Momento Mori --- by Nova Jiang" ),
-    array( 2082, 100000, 1, "Inspiration --- by Jasper Byrne" ),
-    array( 2083, 100000, 1, "Church --- by Lauren Serafin" ),
-    array( 2084, 100000, 1, "Evolve --- by Lauren Serafin" ),
-    array( 2085, 100000, 1, "Friends --- by Lauren Serafin" ),
-    array( 2086, 100000, 1, "Music --- by Lauren Serafin" ),
-    array( 2087, 100000, 1, "School --- by Lauren Serafin" ),
-    array( 2088, 100000, 1, "Isolation --- by Lauren Serafin" ),
-    array( 2089, 100000, 1, "Jacob III de Gheyn --- by Cloobrandt" ),
-    array( 2090, 100000, 1, "Sarsaparilla Day --- by Art Vogt" ),
-    array( 2091, 100000, 1, "Sarsaparilla Night --- by Art Vogt" ),
-    array( 2092, 100000, 1, "Sarsaparilla Sunset --- by Art Vogt" ),
-    array( 2093, 100000, 1, "Ristretto --- by Andy Lin" ),
-    array( 2094, 100000, 1, "Blythe --- by Andy Lin" ),
-    array( 2095, 100000, 1, "Jane --- by Andy Lin" ),
-    array( 2096, 100000, 1, "Full --- by Mark Essen" ),
-    array( 2097, 100000, 1, "Empty --- by Mark Essen" ),
-    array( 2098, 100000, 1, "Doing Time --- by Charlie Franco" ),
-    array( 2099, 100000, 1, "Knock Out --- by Charlie Franco" ),
-    array( 2100, 100000, 1, "Snow Mask --- by Charlie Franco" ),
-    array( 2101, 100000, 1, "Stars-N-Stripes --- by Charlie Franco" ),
-    array( 2102, 100000, 1, "Tongue Out --- by Charlie Franco" ),
-    array( 2103, 100000, 1, "Sierra --- by William Beebe" ),
-    array( 2104, 100000, 1, "Fog --- by William Beebe" ),
-    array( 2105, 100000, 1, "Aegis --- by William Beebe" ),
-    array( 2106, 100000, 1, "Weave --- by William Beebe" ),
-    array( 2107, 100000, 1, "Brooklyn --- by William Beebe" ),
-    array( 2108, 100000, 1, "Sauron --- by William Beebe" ),
-    array( 2109, 100000, 1, "Color Field --- by William Beebe" ),
-    array( 2110, 100000, 1, "Counterpoint --- by William Beebe" ),
-    array( 2111, 100000, 1, "Future Buildings --- by William Beebe" ),
-    array( 2112, 100000, 1, "Shield --- by William Beebe" ),
-    array( 2113, 100000, 1, "Domicile --- by William Beebe" ),
-    array( 2114, 100000, 1, "Cityscape --- by William Beebe" ),
-    array( 2115, 100000, 1, "Form --- by William Beebe" ),
-    array( 2116, 100000, 1, "Medusa's Head --- by William Beebe" ),
-    array( 2117, 100000, 1, "A Snail in the Sun --- by Jason and Willow Adaska" ),
+    array( 2038, 100000, 2, "Skull --- by David S. Goyer" ),
+    array( 2039, 100000, 2, "Crow in Red --- by Adam Saltsman" ),
+    array( 2040, 100000, 2, "Geovisage One --- by Adam Saltsman" ),
+    array( 2041, 100000, 2, "Geovisage Two --- by Adam Saltsman" ),
+    array( 2042, 100000, 2, "Geovisage Three --- by Adam Saltsman" ),
+    array( 2043, 100000, 2, "Savanna --- by Adam Saltsman" ),
+    array( 2044, 100000, 2, "Sentinel --- by Adam Saltsman" ),
+    array( 2045, 100000, 2, "The Grim Bulldog --- by Jason Stevenson" ),
+    array( 2046, 100000, 2, "Wilderness --- by Terry Cavanagh" ),
+    array( 2047, 100000, 2, "Electric Slide --- by Darius Kazemi" ),
+    array( 2048, 100000, 2, "Rhizome --- by Darius Kazemi" ),
+    array( 2049, 100000, 2, "Stay Up All Night --- by Darius Kazemi" ),
+    array( 2050, 100000, 2, "Metaphysicians --- by Darius Kazemi" ),
+    array( 2051, 100000, 2, "Summer Reach --- by William Beebe" ),
+    array( 2052, 100000, 2, "Toby --- by Jordan Magnuson" ),
+    array( 2053, 100000, 2, "RYB 1 --- by Alex Diamond" ),
+    array( 2054, 100000, 2, "RYB 2 --- by Alex Diamond" ),
+    array( 2055, 100000, 2, "RYB 3 --- by Alex Diamond" ),
+    array( 2056, 100000, 2, "RYB 4 --- by Alex Diamond" ),
+    array( 2057, 100000, 2, "RYB 5 --- by Alex Diamond" ),
+    array( 2058, 100000, 2, "Dermatillomanian Handle --- by Alex Diamond" ),
+    array( 2059, 100000, 2, "Dermatillomanian Cultivation --- by Alex Diamond" ),
+    array( 2060, 100000, 2, "Dermatillomanian Sheath --- by Alex Diamond" ),
+    array( 2061, 100000, 2, "Dermatillomanian Seduction --- by Alex Diamond" ),
+    array( 2062, 100000, 2, "Dermatillomanian Abyss --- by Alex Diamond" ),
+    array( 2063, 100000, 2, "UKU1NbyLyNCsRgVSsoVOLosPEOiyGRJKRdUh2a1WP5P6" ),
+    array( 2064, 100000, 2, "i1wZebCgqGYLcBWK7K888dfPdJs57ohaoF35NBSp8xxh" ),
+    array( 2065, 100000, 2, "sKZAkUoDPjKdEmOaucx1RUqHi444FV3JquwzIVLFBI8B" ),
+    array( 2066, 100000, 2, "H8d9k15aVQob0d4pXEiFGL6Ry2HMRckCdKD5MJT1sCh9" ),
+    array( 2067, 100000, 2, "Hrn6kGh64jqCISghEEyyU13D4EV5gWItFD0VaJSKBEWZ" ),
+    array( 2068, 100000, 2, "Dogs --- by Kyle Pulver" ),
+    array( 2069, 100000, 2, "Set --- by Kyle Pulver" ),
+    array( 2070, 100000, 2, "Rise --- by Kyle Pulver" ),
+    array( 2071, 100000, 2, "Haze --- by Kyle Pulver" ),
+    array( 2072, 100000, 2, "Four --- by Kyle Pulver" ),
+    array( 2073, 100000, 2, "Prism --- by Kyle Pulver" ),
+    array( 2074, 100000, 2, "Protect Me from What I Want --- by Nick Montfort" ),
+    array( 2075, 100000, 2, "Forward --- by Jason Stevenson" ),
+    array( 2076, 100000, 2, "Skull over Red --- by Mark Johns" ),
+    array( 2077, 100000, 2, "Dead End --- by S. Galvin" ),
+    array( 2078, 100000, 2, "Ceci n'est pas une beetle --- by S. Galvin" ),
+    array( 2079, 100000, 2, "Palomar --- by S. Galvin" ),
+    array( 2080, 100000, 2, "Distant Chrome --- by S. Galvin" ),
+    array( 2081, 100000, 2, "Momento Mori --- by Nova Jiang" ),
+    array( 2082, 100000, 2, "Inspiration --- by Jasper Byrne" ),
+    array( 2083, 100000, 2, "Church --- by Lauren Serafin" ),
+    array( 2084, 100000, 2, "Evolve --- by Lauren Serafin" ),
+    array( 2085, 100000, 2, "Friends --- by Lauren Serafin" ),
+    array( 2086, 100000, 2, "Music --- by Lauren Serafin" ),
+    array( 2087, 100000, 2, "School --- by Lauren Serafin" ),
+    array( 2088, 100000, 2, "Isolation --- by Lauren Serafin" ),
+    array( 2089, 100000, 2, "Jacob III de Gheyn --- by Cloobrandt" ),
+    array( 2090, 100000, 2, "Sarsaparilla Day --- by Art Vogt" ),
+    array( 2091, 100000, 2, "Sarsaparilla Night --- by Art Vogt" ),
+    array( 2092, 100000, 2, "Sarsaparilla Sunset --- by Art Vogt" ),
+    array( 2093, 100000, 2, "Ristretto --- by Andy Lin" ),
+    array( 2094, 100000, 2, "Blythe --- by Andy Lin" ),
+    array( 2095, 100000, 2, "Jane --- by Andy Lin" ),
+    array( 2096, 100000, 2, "Full --- by Mark Essen" ),
+    array( 2097, 100000, 2, "Empty --- by Mark Essen" ),
+    array( 2098, 100000, 2, "Doing Time --- by Charlie Franco" ),
+    array( 2099, 100000, 2, "Knock Out --- by Charlie Franco" ),
+    array( 2100, 100000, 2, "Snow Mask --- by Charlie Franco" ),
+    array( 2101, 100000, 2, "Stars-N-Stripes --- by Charlie Franco" ),
+    array( 2102, 100000, 2, "Tongue Out --- by Charlie Franco" ),
+    array( 2103, 100000, 2, "Sierra --- by William Beebe" ),
+    array( 2104, 100000, 2, "Fog --- by William Beebe" ),
+    array( 2105, 100000, 2, "Aegis --- by William Beebe" ),
+    array( 2106, 100000, 2, "Weave --- by William Beebe" ),
+    array( 2107, 100000, 2, "Brooklyn --- by William Beebe" ),
+    array( 2108, 100000, 2, "Sauron --- by William Beebe" ),
+    array( 2109, 100000, 2, "Color Field --- by William Beebe" ),
+    array( 2110, 100000, 2, "Counterpoint --- by William Beebe" ),
+    array( 2111, 100000, 2, "Future Buildings --- by William Beebe" ),
+    array( 2112, 100000, 2, "Shield --- by William Beebe" ),
+    array( 2113, 100000, 2, "Domicile --- by William Beebe" ),
+    array( 2114, 100000, 2, "Cityscape --- by William Beebe" ),
+    array( 2115, 100000, 2, "Form --- by William Beebe" ),
+    array( 2116, 100000, 2, "Medusa's Head --- by William Beebe" ),
+    array( 2117, 100000, 2, "A Snail in the Sun --- by Jason and Willow Adaska" ),
 
-    array( 2118, 100000, 1, "Burning of Parliment --- by Frank Lantz" ),
-    array( 2119, 100000, 1, "Here is a Hand.png --- by Frank Lantz" ),
-    array( 2120, 100000, 1, "Hexagram Orange --- by Frank Lantz" ),
-    array( 2121, 100000, 1, "Jason --- by Frank Lantz" ),
-    array( 2122, 100000, 1, "Ko --- by Frank Lantz" ),
-    array( 2123, 100000, 1, "Speech Balloon --- by Frank Lantz" ),
-    array( 2124, 100000, 1, "Keep --- by Richard Lemarchand" ),
-    array( 2125, 100000, 1, "The Knowledge of Good and Evil --- by Richard Lemarchand" ),
-    array( 2126, 100000, 1, "Disintegration --- by Andy Nealen" ),
-    array( 2127, 100000, 1, "Membrane --- by Andy Nealen" ),
-    array( 2128, 100000, 1, "Aero --- by Andy Nealen" ),
-    array( 2129, 100000, 1, "Blio --- by Andy Nealen" ),
-    array( 2130, 100000, 1, "Cono --- by Andy Nealen" ),
-    array( 2131, 100000, 1, "Alien --- by Matthew Diamond" ),
-    array( 2132, 100000, 1, "Infected --- by Matthew Diamond" ),
-    array( 2133, 100000, 1, "Surge After Hokusai --- by Steven Diamond" ),
-    array( 2134, 100000, 1, "Storm Center --- by Steven Diamond" ),
-    array( 2135, 100000, 1, "Having a Read --- by Mike Treanor" ),
-    array( 2136, 100000, 1, "Beast --- by Ashley Davis" ),
-    array( 2137, 100000, 1, "Mountain --- by Samuel Roberts" ),
-    array( 2138, 100000, 1, "Happy Tiger --- by Olivier Lejade" ),
-    array( 2139, 100000, 1, "Eiffel at Dawn --- by Olivier Lejade" ),
-    array( 2140, 100000, 1, "Girls, Let's Start a Riot! --- by Moboid" ),
-    array( 2141, 100000, 1, "Real Art! --- by Edmund McMillen" ),
-    array( 2142, 100000, 1, "One of Two --- by Chris Bell" ),
-    array( 2143, 100000, 1, "Sky --- by Jason Rhorer" ),
-    array( 2144, 100000, 1, "Mouth --- by Phil Fish" ),
-    array( 2145, 100000, 1, "Redface --- by Phil Fish" ),
-    array( 2146, 100000, 1, "The Watermelon --- by Derek Yu" ),
-    array( 2147, 100000, 1, "Woman by the Sea --- by Daniel Benmergui" ),
-    array( 2148, 100000, 1, "Woman by the Sea --- by Daniel Benmergui" ),
-    array( 2149, 100000, 1, "Attack of the Clone Maze --- by Ayza" ),
-    array( 2150, 100000, 1, "Run From Blue --- by Ayza" ),
-    array( 2151, 100000, 1, "Watch Out, There's Traps Set --- by Ayza" ),
-    array( 2152, 100000, 1, "Goth Knight Huskarl --- by Mez" ),
-    array( 2153, 100000, 1, "Roman Knight Order Giver --- by Mez" ),
-    array( 2154, 100000, 1, "Pepper --- by Jackie Rohrer" )
+    array( 2118, 100000, 2, "Burning of Parliment --- by Frank Lantz" ),
+    array( 2119, 100000, 2, "Here is a Hand.png --- by Frank Lantz" ),
+    array( 2120, 100000, 2, "Hexagram Orange --- by Frank Lantz" ),
+    array( 2121, 100000, 2, "Jason --- by Frank Lantz" ),
+    array( 2122, 100000, 2, "Ko --- by Frank Lantz" ),
+    array( 2123, 100000, 2, "Speech Balloon --- by Frank Lantz" ),
+    array( 2124, 100000, 2, "Keep --- by Richard Lemarchand" ),
+    array( 2125, 100000, 2, "The Knowledge of Good and Evil --- by Richard Lemarchand" ),
+    array( 2126, 100000, 2, "Disintegration --- by Andy Nealen" ),
+    array( 2127, 100000, 2, "Membrane --- by Andy Nealen" ),
+    array( 2128, 100000, 2, "Aero --- by Andy Nealen" ),
+    array( 2129, 100000, 2, "Blio --- by Andy Nealen" ),
+    array( 2130, 100000, 2, "Cono --- by Andy Nealen" ),
+    array( 2131, 100000, 2, "Alien --- by Matthew Diamond" ),
+    array( 2132, 100000, 2, "Infected --- by Matthew Diamond" ),
+    array( 2133, 100000, 2, "Surge After Hokusai --- by Steven Diamond" ),
+    array( 2134, 100000, 2, "Storm Center --- by Steven Diamond" ),
+    array( 2135, 100000, 2, "Having a Read --- by Mike Treanor" ),
+    array( 2136, 100000, 2, "Beast --- by Ashley Davis" ),
+    array( 2137, 100000, 2, "Mountain --- by Samuel Roberts" ),
+    array( 2138, 100000, 2, "Happy Tiger --- by Olivier Lejade" ),
+    array( 2139, 100000, 2, "Eiffel at Dawn --- by Olivier Lejade" ),
+    array( 2140, 100000, 2, "Girls, Let's Start a Riot! --- by Moboid" ),
+    array( 2141, 100000, 2, "Real Art! --- by Edmund McMillen" ),
+    array( 2142, 100000, 2, "One of Two --- by Chris Bell" ),
+    array( 2143, 100000, 2, "Sky --- by Jason Rhorer" ),
+    array( 2144, 100000, 2, "Mouth --- by Phil Fish" ),
+    array( 2145, 100000, 2, "Redface --- by Phil Fish" ),
+    array( 2146, 100000, 2, "The Watermelon --- by Derek Yu" ),
+    array( 2147, 100000, 2, "Woman by the Sea --- by Daniel Benmergui" ),
+    array( 2148, 100000, 2, "Woman by the Sea --- by Daniel Benmergui" ),
+    array( 2149, 100000, 2, "Attack of the Clone Maze --- by Ayza" ),
+    array( 2150, 100000, 2, "Run From Blue --- by Ayza" ),
+    array( 2151, 100000, 2, "Watch Out, There's Traps Set --- by Ayza" ),
+    array( 2152, 100000, 2, "Goth Knight Huskarl --- by Mez" ),
+    array( 2153, 100000, 2, "Roman Knight Order Giver --- by Mez" ),
+    array( 2154, 100000, 2, "Pepper --- by Jackie Rohrer" )
     );
 
     
